--- a/markup/components/selectbox/selectbox.styl
+++ b/markup/components/selectbox/selectbox.styl
@@ -81,6 +81,8 @@
             opacity: 0
             pointer-events: none
             transition(opacity)
+            height: 100%
+            background-color: darkGreyColor
 
     &__item
         display: flex
