--- a/markup/components/user-messages/user-messages.styl
+++ b/markup/components/user-messages/user-messages.styl
@@ -92,6 +92,9 @@
         flex: 1
         overflow: hidden
 
+        .scroll-wrapper
+            flex: 1
+
         +below(900px)
             //- TODO AJAX PRELOAD??
             display: none
