--- a/markup/components/selectbox/selectbox.styl
+++ b/markup/components/selectbox/selectbox.styl
@@ -123,7 +123,7 @@
                 opacity 1
 
     &_small
-        display: flex
+        display: inline-flex
         align-items: flex-end
 
         & ^[0]__box
