--- a/markup/components/file/file.styl
+++ b/markup/components/file/file.styl
@@ -81,8 +81,11 @@
             max-width: 151px
             margin-top: 9px
             flex: 0
-            text-overflow initial
-            white-space initial
+            overflow initial
+
+            span
+                text-overflow initial
+                white-space initial
 
         & ^[0]__description
             margin-top: auto
