--- a/markup/components/radio/radio.styl
+++ b/markup/components/radio/radio.styl
@@ -3,6 +3,9 @@
     display inline-flex
     align-items: center
 
+    &_md
+        height: 60px
+
     &__input
         display none
         opacity 0
