--- a/markup/components/user-fill-profile/user-fill-profile.pug
+++ b/markup/components/user-fill-profile/user-fill-profile.pug
@@ -302,7 +302,7 @@ mixin user-fill-profile-3
                         +col(12)
                             +radio(false, 'outcall-availability', 1) Hotel visits only
                         +col(12)
-                            +radio(false, 'outcall-availability', 2) Home visits only
+                            +radio(false, 'outcall-availability', 2)._md Home visits only
                         +col(12)
                             +radio(false, 'outcall-availability', 3) Hotel & Home visits
                         +col(12)
