--- a/markup/components/selectbox/selectbox.styl
+++ b/markup/components/selectbox/selectbox.styl
@@ -71,6 +71,8 @@
         margin-top: 13px
         box-shadow 0 10px 40px rgba(29, 29, 29, .1)
         z-index: 100
+        max-height: 240px
+        overflow-y: auto
 
         &_dropdown
             border-left: 1px solid rgba(#efefef, .06)
