--- a/markup/components/selectbox/selectbox.styl
+++ b/markup/components/selectbox/selectbox.styl
@@ -2,6 +2,11 @@
     position: relative
     display: block
 
+    &_active
+        & ^[0]__list
+            opacity: 1
+            pointer-events all
+
     &_grey
         & ^[0]__box
             background-color bgColor
@@ -67,12 +72,12 @@
         top: 100%
         width: 258px
         left: 0
-        display: none
         margin-top: 13px
         box-shadow 0 10px 40px rgba(29, 29, 29, .1)
         z-index: 100
-        max-height: 240px
-        overflow-y: auto
+        opacity: 0
+        pointer-events none
+        transition(opacity)
 
         &_dropdown
             border-left: 1px solid rgba(#efefef, .06)
@@ -82,7 +87,6 @@
             margin-left: -1px
             opacity: 0
             pointer-events: none
-            transition(opacity)
             height: 100%
             background-color: darkGreyColor
 
