--- a/markup/components/navbar/navbar.styl
+++ b/markup/components/navbar/navbar.styl
@@ -73,6 +73,11 @@
                     align-items: center
                     justify-content: center
 
+        &_dropdown
+
+           & > a
+                color: #fff
+
         &_dropdown:hover, &.active, &_active, &_active:hover
             & ^[0]__link
                 background-color: darkGreyColor
