--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -98,6 +98,9 @@
                         color: darkGreyColor
                         fill: darkGreyColor
 
+                        svg
+                            fill: darkGreyColor
+
                 &__item_profile
                     min-width: initial
 
