--- a/markup/components/model-list/model-list.pug
+++ b/markup/components/model-list/model-list.pug
@@ -23,7 +23,7 @@ mixin model-list(isHelp)
                 +e.header-col.hide-mob.hide-when-header-fixed
                     +e.label Sort by
                     +selectbox.__control
-                        +selectbox-control(name='sory-by')
+                        +selectbox-control(name='sort-by')
                             optgroup(label='Date')
                                 option(value='date-newest') Newest first
                                 option(value='date-oldest') Oldest first
