--- a/markup/components/head/head.pug
+++ b/markup/components/head/head.pug
@@ -23,6 +23,8 @@ mixin head(data)
 
     link(rel="icon" type="image/x-icon" href="favicon.ico")
     script(src='%=static=%js/separate-js/jquery-3.2.1.min.js')
+    script(src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js")
     script(src=`https://maps.googleapis.com/maps/api/js?key=AIzaSyCb75twxWdJqfiHIVuKVReb-39Yo1EFQUQ`)
+    script(src='%=static=%js/separate-js/CustomGoogleMapMarker.js')
     script.
         (function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)
