--- a/markup/components/map/map.pug
+++ b/markup/components/map/map.pug
@@ -4,6 +4,10 @@ mixin map(isDefault)
             +e.heading
                 +e.SPAN.text All escorts
                 +e.SPAN.text._main 41908
+
+            +e.content
+                block
+
             +e.buttons
                 +e.button.js-map-zoom-in
                     != pugHelpers.Icon.call(locals, {iconName: 'plus', className: 'map__zoom-in', iconWidth: 18, iconHeight: 18})
