--- a/markup/components/map/map.styl
+++ b/markup/components/map/map.styl
@@ -13,11 +13,28 @@
         display: inline-flex
         align-items: center
         padding: 0 18px
-        min-width 258px
         height 48px
         box-shadow 0 10px 40px rgba(29, 29, 29, .6)
         background-color darkGreyColor
-        z-index: 100
+        z-index: 2
+        min-width: 258px
+
+    .scroll-wrapper
+        padding-top: 90px !important
+
+    &__content
+        min-width: 258px
+        position: absolute
+        top: 0
+        left: 30px
+        z-index: 1
+        max-height: 100%
+
+        .model-preview
+            background-color: #fff
+
+        & > *:not(:last-child)
+            margin-bottom: 12px
 
     &__text
         color #fff
