--- a/markup/components/map/map.styl
+++ b/markup/components/map/map.styl
@@ -2,6 +2,30 @@
     position: relative
     height: 100%
 
+    &__marker
+        position absolute
+        cursor pointer
+        transition(border-color)
+        padding: 10px
+        border: 2px solid transparent
+        border-radius: 50%
+
+        .close
+            display: none
+            position: absolute
+            top: 10px
+            right: 10px
+            transform: translate(50%, -50%)
+            z-index 10
+
+        &.active
+            display: block
+            border-color: mainColor
+            z-index: 10
+
+            .close
+                display: flex
+
     &__block
         width: 100%
         height: 100%
@@ -18,6 +42,16 @@
         background-color darkGreyColor
         z-index: 2
         min-width: 258px
+
+        svg
+            display: none
+            fill: rgba(#fff, .4)
+            margin-left: auto
+            cursor: pointer
+
+        &.active
+            svg
+                display: block
 
     .scroll-wrapper
         padding-top: 90px !important
