--- a/markup/components/model-preview/model-preview.styl
+++ b/markup/components/model-preview/model-preview.styl
@@ -11,6 +11,13 @@
         &:not(:last-child)
             margin-bottom: grid-gap;
 
+    &_hovered
+
+        & ^[0]__actions
+            opacity: 1
+            pointer-events all
+            position: static
+
     &:hover
         box-shadow: 0 10px 40px rgba(29, 29, 29, 0.1)
 
