--- a/markup/components/filter/filter.styl
+++ b/markup/components/filter/filter.styl
@@ -124,6 +124,12 @@
         .grid:not(:first-child)
             border-color: rgba(#efefef, .06)
 
+        & ^[0]__mobile-nav
+            border-color: rgba(#efefef, .06)
+
+            a
+                color: rgba(255,255,255,.35)
+
 .filter-additional
     display: none
     box-shadow 0 10px 40px rgba(29, 29, 29, .1)
