--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -107,12 +107,6 @@
 
                         svg
                             fill: darkGreyColor
-                    //
-                    //.navbar__link:hover
-                    //    color: mainColor
-                    //
-                    //    .navbar__description svg
-                    //        fill: mainColor
 
                 &_dark
                     .navbar__item_credits .navbar__description svg
@@ -148,6 +142,15 @@
         .logo__text
             display: none
 
+        .navbar__link_mob-map
+            svg:last-child
+                display: none
+
+            &.active
+                svg:last-child
+                    display: block
+                svg:first-child
+                    display: none
     +below(1024px)
         &__navbar
             &_desktop
