--- a/markup/components/map/map.styl
+++ b/markup/components/map/map.styl
@@ -43,6 +43,11 @@
         z-index: 2
         min-width: 258px
 
+        +below(540px)
+            top: 12px
+            left: 12px
+            right: 12px
+
         svg
             display: none
             fill: rgba(#fff, .4)
@@ -56,6 +61,9 @@
     .scroll-wrapper
         padding-top: 90px !important
 
+        +below(540px)
+            padding-bottom: 30px
+
     &__content
         min-width: 258px
         position: absolute
@@ -63,6 +71,14 @@
         left: 30px
         z-index: 1
         max-height: 100%
+
+        &.scroll-wrapper
+            +below(540px)
+                left: 50%
+                transform: translateX(-50%)
+
+                & ^[0]__content
+                    position: static
 
         .model-preview
             background-color: #fff
@@ -88,6 +104,9 @@
         right: 30px
         z-index: 100
         display: block
+
+        +below(540px)
+            display: none
 
     &__button
         display: flex
