fix navbar badge

--- a/markup/components/navbar/navbar.styl
+++ b/markup/components/navbar/navbar.styl
@@ -214,6 +214,7 @@
         color #fff
         font-size 12px
         font-weight 700
+        z-index: 1
 
         &_dark
             background-color: #212223
