model-list-agencies

--- a/markup/components/map/map.styl
+++ b/markup/components/map/map.styl
@@ -65,7 +65,7 @@
             padding-bottom: 30px
 
     &__content
-        min-width: 258px
+        width: 258px
         position: absolute
         top: 0
         left: 30px
