--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -22,7 +22,8 @@ block header
 block content
     +container
         +demo
-            +demo-link('model-list.html') 01_List_1
+            +demo-link('model-list.html') 01_List_1 (all escort, independet)
+            +demo-link('model-list-agencies.html') 01_List_1 (agencies)
             +demo-link('model-list-no-models.html') 01_List_1_no models
             +demo-link('model-list-search-result.html') 01_List_8_search 2
             +demo-link('model-list-help.html') 01_List_10_help
