--- a/markup/components/agency-card/agency-card.styl
+++ b/markup/components/agency-card/agency-card.styl
@@ -101,6 +101,71 @@
                     +below(768px)
                         margin-bottom: 21px
 
+    &_column
+        box-sizing: border-box
+
+        & ^[0]__info
+            width: 100%
+
+        & ^[0]__description
+            margin-left: -1px
+
+        .button
+            width: 100%
+            line-height: 3.625
+            background-color: #fff
+            border-top: 1px solid borderColor
+            display: block !important
+
+        & ^[0]__rating
+            position: absolute
+            top: 100%
+            left: 0
+            padding-left: 31px
+            padding-right: 31px
+            display: flex
+            align-items: center
+            width: 100%
+            height: 60px
+            border-bottom: 1px solid borderColor
+            background-color: #fff
+
+            .rating
+                width: 100%
+
+                &__value
+                    color: darkGreyColor
+
+            &-label
+                display: none
+
+        & ^[0]__row
+            padding-left: 30px
+            padding-right: 30px
+
+            &:not(:last-child)
+                border-bottom: 0
+
+            &_top
+                min-height: initial
+
+            &_bottom
+                flex-direction: column
+                justify-content: flex-start
+                margin-top: 60px
+
+            & ^[0]__col
+                width: 100%
+
+                &:first-child
+                    flex-shrink: 0
+                    margin-right: 0
+                    width: 100%
+
+                &:not(:last-child)
+                    margin-right: 0px
+                    margin-bottom: 21px
+
     &__picture
         position absolute
         top 0
