--- a/markup/pages/test.pug
+++ b/markup/pages/test.pug
@@ -21,6 +21,7 @@ include ../components/recommended-slider/recommended-slider
 include ../components/reviews/reviews
 include ../components/send-form/send-form
 include ../components/textarea/textarea
+include ../components/agency-card/agency-card
 include ../components/profile-common-popup/profile-common-popup
 include ../components/profile-photo-popup/profile-photo-popup
 
@@ -30,7 +31,8 @@ block header
 block content
     div(style="height: 2000px; margin-top: 100px; background-color: transparent")
         +container
-            +recommended-slider
+            div(style='width: 258px')
+                +agency-card-new._column
 
         +demo
             +demo-link('#profile-video')(data-popup-id='#profile-video' data-action='show').js-toggle-popup call
