--- a/markup/components/navbar/navbar.styl
+++ b/markup/components/navbar/navbar.styl
@@ -257,6 +257,9 @@
     &_dark
         background-color: darkGreyColor
 
+        & ^[0]__arrow
+            opacity: 1
+
         .search-bar
             background-color: darkGreyColor
 
