--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -38,8 +38,10 @@
             .selectbox__box
                 border-color: transparent
 
-        & ^[0]__navbar_desktop
+        & ^[0]__navbar
             order: 2
+
+        & ^[0]__navbar_desktop
 
             .navbar
                 height: 60px
