--- a/markup/components/share/share.styl
+++ b/markup/components/share/share.styl
@@ -37,3 +37,7 @@
 
         &_dots
             margin-left: initial
+
+    .dotted-dropdown
+        &__button
+            background-color: transparent
