group map markers

--- a/markup/components/avatar/avatar.styl
+++ b/markup/components/avatar/avatar.styl
@@ -3,6 +3,10 @@
     display: block
     flex-shrink: 0
 
+    &_size_xs
+        width: 28px
+        height: 28px
+
     &_size_small
         width: 40px
         height: 40px
