--- a/markup/components/head/head.pug
+++ b/markup/components/head/head.pug
@@ -26,5 +26,6 @@ mixin head(data)
     script(src='%=static=%js/separate-js/markerclusterer.js')
     script(src=`https://maps.googleapis.com/maps/api/js?key=AIzaSyCb75twxWdJqfiHIVuKVReb-39Yo1EFQUQ`)
     script(src='%=static=%js/separate-js/CustomGoogleMapMarker.js')
+    script(src='%=static=%js/separate-js/CustomGoogleMapMarkerGroup.js')
     script.
         (function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)
