--- a/markup/components/map/map.styl
+++ b/markup/components/map/map.styl
@@ -2,7 +2,19 @@
     position: relative
     height: 100%
 
-    &__marker
+    &__count
+        display: flex
+        width: 28px
+        height: 28px
+        justify-content: center
+        align-items: center
+        font-size: 12px
+        font-weight: bold
+        background-color: mainColor
+        color: #fff
+        border-radius: 50%
+
+    &__marker, &__group
         position absolute
         cursor pointer
         transition(border-color)
@@ -26,6 +38,19 @@
             .close
                 display: flex
 
+    &__group
+        display: flex
+        flex-wrap: wrap
+        width: 108px
+        height: 108px
+        padding: 24px 20px 20px 24px
+
+        &.active
+            display: flex
+
+        & > *:nth-child(odd)
+                margin-right: 4px
+                margin-bottom: 4px
     &__block
         width: 100%
         height: 100%
