--- a/markup/components/field/field.styl
+++ b/markup/components/field/field.styl
@@ -43,6 +43,10 @@
         &_grey
             color: rgba(#fff, .35)
 
+            & ^[0]__range-text
+                .range-slider__text
+                    color: #fff
+
     &__description
         display: block
         margin-top: 20px
