--- a/markup/components/filter/filter.pug
+++ b/markup/components/filter/filter.pug
@@ -59,7 +59,7 @@ mixin filter-additional()
                 +e.heading Choose Additional Options
                 +e.rating
                     +grid.grid_items_center
-                        +col(6)
+                        +col(6).filter-additional__rating-heading
                             +heading._md._color_white Rating
                             +rating-interactive(5)._dark
                         +col(6).grid__col_align_right.hide-mob
